# bioacoustics-software

./: .gitignore  LICENSE  README.md  noxfile.py  package-lock.json  package.json  pyproject.toml  rse.ini
dataset/: entry_template.json  readme.md  update-from-sheets.py  update-list.py
datasets_json/: ANIMAL-SPOT.json  ANIMAL_SPOT.json  APLOSE.json  ARBIMON.json  ARTWARP.json  AVA.json  AVES.json  AVGN.json  Adobe Audition.json  Adobe_Audition.json  Anabat Insight.json  Anabat_Insight.json  Animal Sound Identifier.json  Animal_Sound_Identifier.json  Audacity.json  Australian Acoustic Observatory Audio Similarity Search.json  AviaNZ.json  Avisoft-SASLab Pro.json  Avisoft_SASLab_Pro.json  Banter.json  BatClassify.json  BatDetect.json  BatExplorer.json  BatScope.json  BioCPPNet.json  BioLingual.json  Bioacoustics Cookbook.json  Bioacoustics Model Zoo.json  Bioacoustics in Python.json  Bioacoustics_Cookbook.json  Bioacoustics_Model_Zoo.json  Bioacoustics_in_Python.json  BirdNET.json  BirdVoxClassify.json  BirdVoxDetect.json  CARACAL.json  CASE.json  DAS.json  DAS4Whales.json  DeepSqueak.json  (+88 more)
docs/: .gitignore  Gemfile  README.md  _config.yml  category.html  feed.xml  index.html
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
software_json/: ANIMAL-SPOT.json  APLOSE.json  ARBIMON.json  ARTWARP.json  AVA.json  AVES.json  AVGN.json  Adobe Audition.json  Anabat Insight.json  Animal Sound Identifier.json  Audacity.json  Australian Acoustic Observatory Audio Similarity Search.json  AviaNZ.json  (+95 more)
(+267 files in other folders)
