[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bioacoustics_software"
version = "0.1.0"
description = "Site that lists bioacoustics software"
authors = [
    {name = "Tessa Rhinehart", email = "tessa.rhinehart@pitt.edu"}
    {name = "Louis Freeland-Haynes", email = "louis.freelandhaynes@pitt.edu"}
    {name = "David Nicholson", email = "nicholdav@gmail.com"}
    {name = "Vanessa Sochat", email = "vsochat@gmail.com"}
    {name = "Justin Kitzes", email = "justin.kitzes@pitt.edu"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
        "License :: OSI Approved :: MIT License",
        'Development Status :: 4 - Beta',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: Implementation :: CPython'
]
requires-python = ">=3.8"
dependencies = [
    "rse[all]>=0.0.47"
]

[project.urls]
Home = "https://github.com/rhine3/bioacoustics-software"
